--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 
-image: gitpod/workspace-mysq
+image: gitpod/workspace-mysql
 
 tasks:
   - init: echo 'init script' # runs during prebuild
